kubernetes/manifests/db/pgadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: database
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
