kubernetes/manifests/db/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: database
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
